TEST_PROGRAMS/VALID/cheuk_siow/valid1.min
# Valid program 1.

var n: int;
var f: int;
var p: float;
var str: string;

read n;
f = n;
p = .123;

str = "Begin computation...";
print str;

while n do
  n = n - 1;
  f = f * n;   # formula description 1
  p = p * 2.0; # formula description 2
done

print f;
print p;

