TEST_PROGRAMS/INVALID/lucas_stinchcombe/declarations_after.min
# invalid minilang program with declarations after statements

c = a - b;
answer = 1;

while a-b do
	answer = answer * a;
	a = a - 1;
done

while c do
	answer = answer / c;
	c = c - 1;
done


var a: int;
var b: int;
var c: int;
var answer: int;

